logs/pjq.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pjq'...
Compiling './lib/python3.5/site-packages/pjq/__main__.py'...
***   File "./lib/python3.5/site-packages/pjq/__main__.py", line 24
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pjq/syntax'...
Compiling './lib/python3.5/site-packages/pjq/syntax/lexer.py'...
***   File "./lib/python3.5/site-packages/pjq/syntax/lexer.py", line 233
    print yacc.parse("bicycle")
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pjq-0.0.2.dev6.egg-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/ply'...
Listing './lib/python3.5/site-packages/ply-3.8.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Compiling './lib/python3.5/site-packages/tests/test_lexer.py'...
***   File "./lib/python3.5/site-packages/tests/test_lexer.py", line 17
    print yacc.parse("bicycle")
             ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
